<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/de_frm_backgroud"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/de_img_backgroud"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="-50dp"
            android:layout_marginRight="-300dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/start_2"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/de_login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="91dip"
            android:src="@drawable/about_seal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dip"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/liner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:layout_marginRight="30dip"
                android:orientation="horizontal">


                <com.example.qipintongzhongguozongbu.myqipintong.rongyun.im.server.widget.ClearWriteEditText
                    android:id="@+id/de_login_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rc_ed_public_service_search_selector"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"/>

                <FrameLayout
                    android:id="@+id/fr_username_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/de_login_phone"
                    android:layout_centerVertical="true"
                    android:visibility="gone">

                </FrameLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/liner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:layout_marginRight="30dip"
                android:layout_marginTop="37dip"
                android:orientation="horizontal">


                <com.example.qipintongzhongguozongbu.myqipintong.rongyun.im.server.widget.ClearWriteEditText
                    android:id="@+id/de_login_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rc_ed_public_service_search_selector"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"/>

                <FrameLayout
                    android:id="@+id/fr_pass_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/de_login_password"
                    android:layout_centerVertical="true"
                    android:visibility="gone">

                </FrameLayout>
            </RelativeLayout>


            <Button
                android:id="@+id/de_login_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:layout_marginRight="30dip"
                android:layout_marginTop="34dip"
                android:background="@drawable/rs_select_btn_blue"
                android:text="@string/Login"
                android:textColor="#FFFFFF"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_other_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50px"
                android:text="其他方式登陆"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="39dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/de_login_forgot"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:textColor="#999999"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/de_login_zhijie"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="游客"
            android:textColor="#999999"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/de_login_register"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/new_user"
            android:textColor="#999999"
            android:textSize="14sp"/>
    </LinearLayout>
</RelativeLayout>
