<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f6"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/rl_my_portrait"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:text="@string/portrait"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <com.example.qipintongzhongguozongbu.myqipintong.rongyun.im.server.widget.SelectableRoundedImageView
            android:id="@+id/img_my_portrait"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14sp"
            android:scaleType="centerCrop"
            app:sriv_left_bottom_corner_radius="3dip"
            app:sriv_left_top_corner_radius="3dip"
            app:sriv_right_bottom_corner_radius="3dip"
            app:sriv_right_top_corner_radius="3dip" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:background="#dfdfdd" />

    <RelativeLayout
        android:id="@+id/rl_my_username"
        android:layout_width="match_parent"
        android:layout_height="45.5dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:text="@string/nickname"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_my_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_centerVertical="true"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="14dp"
            android:textColor="#999"
            android:textSize="16sp" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:background="#dfdfdd" />
    <RelativeLayout
        android:id="@+id/rl_my_telephone"
        android:layout_width="match_parent"
        android:layout_height="45.5dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:text="@string/phone_number"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_my_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:textColor="#999"
            android:textSize="16sp" />

    </RelativeLayout>



</LinearLayout>